--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -25,7 +25,7 @@
         </StackPanel>
 
         <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
-            <StackPanel Margin="40" Background="White" HorizontalAlignment="Center" MaxWidth="1200">
+            <StackPanel Margin="40" Background="{DynamicResource BackgroundBrush}" HorizontalAlignment="Center" MaxWidth="1200">
                 <Border CornerRadius="20" Background="#bbeaba" Padding="30" Margin="0,0,0,30">
                     <StackPanel>
                         <TextBlock Text="Welcome!" FontSize="32" FontWeight="Bold" Foreground="#61be63" TextAlignment="Center"/>
