--- a/Profile.xaml
+++ b/Profile.xaml
@@ -8,6 +8,7 @@
         Title="Profile" Height="800" Width="800">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel Background="White" Margin="20">
+            <!-- Comment -->
 
             <!-- HEADER -->
             <TextBlock Text="PROFILE" 
