Dark mode fixed, Carousel needs to be updated, pending friend request have been added but cannot be accepted yet, Friends database linked; checking current logged in user at the time. Static Map also added to the features,

--- a/GamePage.xaml
+++ b/GamePage.xaml
@@ -5,7 +5,7 @@
         WindowState="Maximized">
 
     <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <StackPanel Background="White" Margin="40">
+        <StackPanel Background="{DynamicResource BackgroundBrush}" Margin="40">
             <!-- HEADER -->
             <TextBlock Text="GAMES" 
                        FontSize="24" 
