--- a/StudyMaterial.xaml
+++ b/StudyMaterial.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="StudyMaterial" Height="800" Width="800">
     <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <StackPanel Background="White" Margin="20">
+        <StackPanel Background="{DynamicResource BackgroundBrush}" Margin="20">
 
             <!-- FEATURES HEADER -->
             <TextBlock Text="StudyMaterial" FontSize="24" FontWeight="Bold" Foreground="#61be63"
@@ -58,7 +58,7 @@
             <!-- Notes Section -->
             <TextBlock Text="Notes" FontSize="22" Foreground="#61be63" FontWeight="Bold" Margin="0,20,0,10"
                        HorizontalAlignment="Center"/>
-            <Border Background="#bbeaba" CornerRadius="10" Padding="15">
+            <Border Background="{DynamicResource AccentBrush}" CornerRadius="10" Padding="15" Margin="0,0,0,20">
                 <StackPanel>
                     <TextBlock Text="Here you can take notes get organised and start learning your summaries!!!"
                                HorizontalAlignment="Center"/>
