--- a/Management.xaml
+++ b/Management.xaml
@@ -139,6 +139,16 @@
                        Margin="0,10,0,10" 
                        TextAlignment="Center"/>
 
+            <!-- Location Submissions Admin Button -->
+            <Button Content="Review Location Submissions" 
+                    x:Name="ReviewSubmissionsButton"
+                    Click="ReviewSubmissions_Click"
+                    Background="#61be63"
+                    Foreground="White"
+                    Padding="20,10"
+                    Margin="0,20"
+                    HorizontalAlignment="Center"/>
+
             <Grid HorizontalAlignment="Center">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
