--- a/Contact.xaml
+++ b/Contact.xaml
@@ -74,7 +74,14 @@
                     <!-- Message -->
                     <TextBlock Text="Message:"/>
                     <TextBox Name="MessageTextBox" Height="100" TextWrapping="Wrap" AcceptsReturn="True" Margin="0,0,0,10"/>
-
+                    <Button Content="Review Contact Messages"
+        x:Name="ReviewContactMessagesButton"
+        Click="ReviewContactMessages_Click"
+        Background="#61be63"
+        Foreground="White"
+        Padding="20,10"
+        Margin="0,10"
+        HorizontalAlignment="Center"/>
                     <!-- Submit Button -->
                     <Button Content="Submit" Background="#61be63" Foreground="White" Padding="10,5"
                 Click="SubmitButton_Click" HorizontalAlignment="Center" Width="100"/>
